# 2D-Physics-Engine

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md
include/: Body.hpp  PhysicsWorld.hpp  Render.hpp  Renderer.hpp  Shader.hpp  Vec2.hpp
shaders/: circle.vert
src/: main.cpp
src/core/: Body.cpp  Body.hpp  PhysicsWorld.cpp  Vec2.cpp  Vector.cpp  Vector.hpp
src/render/: Render.cpp
src/renderer/: Renderer.cpp
src/shader/: Shader.cpp
